Change style on Icons & Question to avoid messing up columns on smaller devices

--- a/src/sass/Icons.module.sass
+++ b/src/sass/Icons.module.sass
@@ -2,21 +2,9 @@
     font-size: 1.2em
     cursor: pointer
 
-=faUpMargin($marginLeft, $marginRight)
-    margin-left: $marginLeft !important
-    margin-right: $marginRight !important
-
 .faUp
-   +faUpMargin(1.5rem, 1.5rem)
+    margin-left: 1.5rem !important
+    margin-right: 1.5rem !important
 
-@media only screen and (max-width: 1600px) 
-    .faUp
-       +faUpMargin(1.2rem, 1.2rem)
-
-@media only screen and (max-width: 1400px) 
-    .faUp
-        +faUpMargin(1rem, 1rem)
-
-@media only screen and (max-width: 1400px) 
-    .faUp
-       +faUpMargin(0.7rem, 0.7rem)
+.faDown
+    margin-right: 1.5rem !important
